--- a/Ext2ReadNet/Ext2Read.WinForms/Ext2Read.WinForms.csproj
+++ b/Ext2ReadNet/Ext2Read.WinForms/Ext2Read.WinForms.csproj
@@ -7,6 +7,11 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationManifest>app.manifest</ApplicationManifest>
+    <Product>PreFusion Firmware Tools</Product>
+    <Title>PreFusion Firmware Tools</Title>
+    <Authors>Eliminater74</Authors>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/Eliminater74/ext2read</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
