feat: Implement GitHub Actions workflow for automated builds, releases, and Inno Setup installer creation.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,15 +30,23 @@ jobs:
         run: |
           dotnet publish i:\GITHUB\Projects\PreFusion_Firmware_Tools\PreFusion_Firmware_Tools\PreFusion.WinForms\PreFusion.WinForms.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -o ./publish
 
-      - name: Create Zip Archive
-        run: |
-          Compress-Archive -Path ./publish/* -DestinationPath ./PreFusion_Firmware_Tools_win-x64.zip
+        Compress-Archive -Path ./publish/* -DestinationPath ./PreFusion_Firmware_Tools_win-x64.zip
 
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./PreFusion_Firmware_Tools_win-x64.zip
-          draft: false
-          prerelease: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Setup Inno Setup
+      run: |
+        choco install innosetup --no-progress
+
+    - name: Compile Installer
+      run: |
+        "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" ./Installer/setup.iss
+
+    - name: Create Release
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          ./PreFusion_Firmware_Tools_win-x64.zip
+          ./Output/PreFusion_Setup_win-x64.exe
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
